# VSocky

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  tree.txt
docker/: Dockerfile.alpine-build  Dockerfile.ubuntu-build  Dockerfile.vsocky-runtime
docs/: use-clang-format.md  vsocket-implementation-guide.md  vsocket-implementation-plan.md  vsocky-technical-plan.md
include/vsocky/utils/: base64.hpp  error.hpp  signal_handler.hpp
include/vsocky/vsocket/: connection.hpp
scripts/: analyze-binary.sh  benchmark.sh  build-alpine.sh  build-local.sh  build_static.sh  check-env.sh  compress-binary.sh  dev-shell.sh  dev.sh  run_tests.sh  setup.sh  test.sh  testing.md
src/: main.cpp
src/utils/: base64.cpp  signal_handler.cpp
src/vsocket/: connection.cpp
tests/: CMakeLists.txt
tests/utils/: test_utils.cpp
tests/vsocket/: test_connection.cpp
